<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="payload" type="com.subzoron.ninecodingchallenge.datamodels.Payload"/>
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ShowDetailsActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbShowDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{payload.title}" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tbShowDetails">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/show_details_tablerow_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgShowDetails"
                    android:shrinkColumns="1">


                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/show_details_tablerow_padding">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/genre"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtShowDetailsGenre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/show_details_table_text_padding"
                            android:text="@{payload.genre}"
                            android:layout_weight="1"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/show_details_tablerow_padding">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/country"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtShowDetailsCountry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/show_details_table_text_padding"
                            android:text="@{payload.country}"
                            android:layout_weight="1"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/show_details_tablerow_padding">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_channel"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtShowDetailsTvChannel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/show_details_table_text_padding"
                            android:text="@{payload.tvChannel}"
                            android:layout_weight="1"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/show_details_tablerow_padding">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/language"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtShowDetailsLanguage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/show_details_table_text_padding"
                            android:text="@{payload.language}"
                            android:layout_weight="1"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/show_details_tablerow_padding">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/episode_count"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtShowDetailsEpisodeCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/show_details_table_text_padding"
                            android:text="@{Integer.toString(payload.episodeCount)}"
                            android:layout_weight="1"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/show_details_tablerow_padding">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtShowDetailsDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/show_details_table_text_padding"
                            android:text="@{payload.description}"
                            android:layout_weight="1"/>
                    </TableRow>
                </TableLayout>

                <ImageView
                    android:id="@+id/imgShowDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/show_placeholder"
                    app:imageUrl="@{payload.image.showImage}"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>